# bridge-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  build.ps1  build.rs  build.sh  update-adb.ps1
.github/workflows/: build.yml
src/: adb.rs  main.rs
tango-bridge.app/Contents/: Info.plist
tango-bridge.app/Contents/Resources/: tango.icns
